--- a/homepage.html
+++ b/homepage.html
@@ -322,7 +322,7 @@ body{
         <ul>
             <li class="item"><a href="home.html">HOME</a></li>
             <!-- <li class="item"><a href="#services-container">SERVICES</a></li> -->
-            <li class="item"><a href="login.html">LOGIN</a></li>
+            <li class="item"><a href="login.html">LOGIN/SIGNUP</a></li>
             <li class="item"><a href="#contact">CONTACT US</a></li>
         </ul>
     </nav>
@@ -336,15 +336,7 @@ body{
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p> -->
         <!-- <a href="customer_db.html" target="_blank">EXPLORE</a> -->
     </section>
-    <section>
-        <h1>How it <b>Works?</b> </h1>
-        <div id="w1">
-            <div class="box">
-
-            </div>
-        </div>
-
-    </section>
+  
 
     <section id="services-container">
         
